# binput_sim

./: Cargo.toml  readme.md
src/: error.rs  file.rs  input.rs  logger.rs  main.rs  time.rs
src/scripting/: action.rs  mod.rs  runner.rs  sequence.rs  utils.rs
src/ui/: mod.rs  tab.rs  utils.rs
