[package]
name = "binput_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
eframe = "0.22.0"
fern = { version = "0.6.2", features = ["colored"] }
inputbot = { git = "https://github.com/Bowarc/InputBot", branch = "develop" }
# https://github.com/enigo-rs/enigo this could be a good replacement for inputbot
log = "0.4.20"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
spin_sleep = "1.1.1"
thiserror = "1.0.47"
strum = { version = "0.25.0", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
futures = "0.3.28"
rfd = "0.12.0"
ron = "0.8.1"
